--- a/index.html
+++ b/index.html
@@ -21,9 +21,40 @@
   <div id="main-scrollbar">
     <div class="site-content">
       <div class="mtn"></div>
-      <h1 class="fw-800 mb-2 text-center h3">
-        Kabarkan
-      </h1>
+      <section class="default-padding-small">
+        <div class="container">
+          <h1 class="fw-800 mb-2 text-center h3">
+            Kabarkan
+          </h1>
+          <br />
+          <br />
+          <div class="row">
+            <div class="col-1-of-1 small-col-1-of-3 mb-8">
+                <a href="/riwayat-blogger-media-dulu-sampai-saat-ini" class="color-inherit">
+                  <div class="card">
+                    <div class="img">
+                      <img
+                            width="350"
+                            height="250"
+                            src="images/1.png"
+                            data-sizes="auto"
+                            data-expand="700"
+                            sizes="353px"
+                          />
+                    </div>
+                    <div class="content">
+                          <h4 class="fw-700 title">Riwayat Blogger Media Dulu Sampai Saat Ini</h4>
+                          <p>
+                            Perubahan website bisa jadi sedikit dijumpai oleh beberapa blogger tersebut. Sekitaran tahun 90an, website mulai dikenalkan ke internet karena ada jurnal...
+                          </p>
+                          <p class="font-size-sm text-muted">July 17, 2021</p>
+                    </div>
+                  </div>
+                </a>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </div>
   <footer>
