--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="id">
 
 <head>
-  <title>Kabarkan</title>
-  <meta name="description" content="Kumpulan Kumpulan berita dari beritaku.netlify.app">
+  <title>Kabarkan - kabarkan.netlify.app</title>
+  <meta name="description" content="Kumpulan Kumpulan kabar dari kabarkan.netlify.app">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="google-site-verification" content="yrElRJR8RlW20DXHQVIezNE015vG9B7QdnuxWbwWPuk" />
